; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_xring.c_run_test.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_xring.c_run_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Test = type { i32, i32, i32, i32, i32 }

@test_producer_thread = common dso_local global i32 0, align 4
@test_consumer_thread = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Test*)* @run_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_test(%struct.Test* %0) #0 {
  %2 = alloca %struct.Test*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.Test* %0, %struct.Test** %2, align 8
  store i32 1, i32* %4, align 4
  %5 = load %struct.Test*, %struct.Test** %2, align 8
  %6 = call i32 @memset(%struct.Test* %5, i32 0, i32 20)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %14, %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp ult i32 %8, 1
  br i1 %9, label %10, label %17

10:                                               ; preds = %7
  %11 = load i32, i32* @test_producer_thread, align 4
  %12 = load %struct.Test*, %struct.Test** %2, align 8
  %13 = call i32 @pixie_begin_thread(i32 %11, i32 0, %struct.Test* %12)
  br label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = add i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %7

17:                                               ; preds = %7
  br label %18

18:                                               ; preds = %23, %17
  %19 = load %struct.Test*, %struct.Test** %2, align 8
  %20 = getelementptr inbounds %struct.Test, %struct.Test* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ult i32 %21, 1
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = call i32 @pixie_usleep(i32 10)
  br label %18

25:                                               ; preds = %18
  %26 = load i32, i32* @test_consumer_thread, align 4
  %27 = load %struct.Test*, %struct.Test** %2, align 8
  %28 = call i32 @pixie_begin_thread(i32 %26, i32 0, %struct.Test* %27)
  br label %29

29:                                               ; preds = %34, %25
  %30 = load %struct.Test*, %struct.Test** %2, align 8
  %31 = getelementptr inbounds %struct.Test, %struct.Test* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = icmp ult i32 %32, 1
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = call i32 @pixie_usleep(i32 10)
  br label %29

36:                                               ; preds = %29
  %37 = load %struct.Test*, %struct.Test** %2, align 8
  %38 = getelementptr inbounds %struct.Test, %struct.Test* %37, i32 0, i32 2
  store i32 1, i32* %38, align 4
  br label %39

39:                                               ; preds = %45, %36
  %40 = load %struct.Test*, %struct.Test** %2, align 8
  %41 = getelementptr inbounds %struct.Test, %struct.Test* %40, i32 0, i32 4
  %42 = load i32, i32* %41, align 4
  %43 = icmp ne i32 %42, 0
  %44 = xor i1 %43, true
  br i1 %44, label %45, label %47

45:                                               ; preds = %39
  %46 = call i32 @pixie_usleep(i32 10)
  br label %39

47:                                               ; preds = %39
  %48 = load %struct.Test*, %struct.Test** %2, align 8
  %49 = getelementptr inbounds %struct.Test, %struct.Test* %48, i32 0, i32 3
  %50 = load i32, i32* %49, align 4
  ret i32 %50
}

declare dso_local i32 @memset(%struct.Test*, i32, i32) #1

declare dso_local i32 @pixie_begin_thread(i32, i32, %struct.Test*) #1

declare dso_local i32 @pixie_usleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
